I added major elements of the assignment after evaluation. I have fusioned the two css I made and leave only the file rafting.css. And to teminer I added another image to avoid too much vacuum.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -207,6 +207,7 @@ div.gallery img {
     transform: scale(1.1);
   }
 
+
 footer {
     display: grid;
     grid-template-columns: 4fr 1fr;
@@ -229,4 +230,275 @@ footer {
     transform: scale(1.5);
 }
 
+/* Contact Us css page */
+/* our team css code */
+.teaminfo {
+    background-color: rgba(236, 110, 38, 0.1);
+    padding: 10px;
+}
+.teaminfo > h2 {
+    color: var(--nav-background-color);
+    margin: 5px;
+    margin-left: 10px;
 
+}
+.employee {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 5px;
+    margin: 5px;
+    
+}
+.our-team {
+    padding: 30px 0 40px;
+    margin: 10px;
+    margin-bottom: 30px;
+    background-color: var(--accent2-color);
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    
+  }
+  
+  .our-team .picture {
+    display: inline-block;
+    height: 130px;
+    width: 130px;
+    margin-bottom: 50px;
+    z-index: 1;
+    position: relative;
+    
+  }
+  
+  .our-team .picture::before {
+    content: "";
+    width: 100%;
+    height: 0;
+    border-radius: 50%;
+    background-color: var(--accent1-color);
+    position: absolute;
+    bottom: 135%;
+    right: 0;
+    left: 0;
+    opacity: 0.9;
+    transform: scale(3);
+    transition: all 0.3s linear 0s;
+  }
+  
+  .our-team:hover .picture::before {
+    height: 100%;
+  }
+  
+  .our-team .picture::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--accent1-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  
+  .our-team .picture img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: all 0.9s ease 0s;
+  }
+  
+  .our-team:hover .picture img {
+    box-shadow: 0 0 0 14px #f7f5ec;
+    transform: scale(0.7);
+  }
+  .team-content .name {
+    color: black;
+    margin: 3px;
+  }
+  .our-team .title {
+    display: block;
+    font-size: 15px;
+    color: var(--primary-color);
+    text-transform: capitalize;
+  }
+  
+  .our-team .social {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: var(--accent1-color);
+    position: absolute;
+    bottom: -100px;
+    left: 0;
+    transition: all 0.5s ease 0s;
+  }
+  
+  .our-team:hover .social {
+    bottom: 0;
+    
+  }
+  
+  .our-team .social li {
+    display: inline-block;
+  }
+  
+  .our-team .social li a {
+    display: block;
+    padding: 10px;
+    font-size: 17px;
+    color: white;
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
+  }
+  
+  .our-team .social li a:hover {
+    color: var(--accent1-color);
+    background-color: #f7f5ec;
+    
+  }
+
+  /* form css style */
+  .contactform {
+    width: 800px;
+    background-color: rgba(225, 222, 222, 0.1);
+    margin: 0 auto;
+    margin-bottom: 1px;
+  }
+.contact img {
+    display: grid;
+    grid-column: 2 / span 3;
+    grid-row: 1 / span 2;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 5px;
+    border: 4px solid var(--accent2-color);
+    box-shadow: 0 0 30px gray;
+}
+  form {
+    width: 650px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 1rem;
+    background-color: rgba(26, 11, 3, 0.1);
+    display: grid;
+}
+fieldset {
+    display: grid;
+    grid-gap: .8rem;
+    margin: 1rem;
+    border: 1px solid var(--accent1-color);
+    padding: 1rem;
+}
+
+legend {
+    padding: 0.5rem;
+    color: var(--accent1-color);
+    font-size: 2.1em;
+}
+label, input, button, select, textarea {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+label {
+    text-align: left;
+    padding-right: 1rem;
+}
+
+input, select, textarea {
+    padding: 0.25rem;
+    font-size: 0.9rem;
+}
+textarea {
+    
+}
+
+.activity {
+    
+    margin-bottom: 10px;
+}
+.activity h4 {
+    margin-left: 2px;
+    margin-bottom: 5px;
+}
+textarea {
+    width: 400px;
+}
+.country {
+    margin-top: 10px;
+    
+}
+select {
+    width: fit-content;
+}
+
+button {
+    margin: 1rem;
+    background-color: var(--accent1-color);
+    width: 70%;
+    margin: 0 auto;
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+}
+button:hover {
+    background-color: rgba(161, 74, 23, 0.8); 
+}
+/* contact information */
+.contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: auto;
+    padding: 10px;
+    background-color: rgba(236, 110, 38, 0.1);
+  }
+.contact h2 {
+    margin: 5px 15px;
+    padding-left: 15px;
+
+}
+.contact p {
+    margin: 4px;
+    padding-top: 5px;
+    grid-row: 2;
+}
+
+.raftingcontact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    background: rgba(236, 110, 38, 0.6);
+    margin-bottom: 20px;
+    
+}
+.infocontact {
+    grid-column: 1;
+    margin: 25px 20px;
+}
+.infocontact h4 {
+    margin: 0 auto;
+    color: #000;
+    padding: 4px;
+    border-bottom: 2px solid black;
+}
+.infocontact > p {
+    margin: 0 auto;
+    color: #000;
+    padding: 4px;
+}
+.gmap {
+    grid-column: 2;
+    margin: 15px;
+    
+    
+}
+.gmap iframe {
+    width: 90%;
+    height: auto;
+    margin-right: 35px;
+    border: 3px solid #408697;
+    box-shadow: 0 0 30px gray;
+}
